--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-pandas
-openpyxl
-plotly
+streamlit>=1.37.0
+pandas>=2.0.0
+openpyxl>=3.1.0
+plotly>=5.15.0
 pandasai>=2.2.0
-matplotlib
+matplotlib>=3.7.0
 groq>=0.5.0
 pydantic>=2.0
+openai>=1.0.0
